# jwo-model-scripts

./: .gitignore  convert_coco_hand_dataset.py  convert_merl_shopping_dataset.py  hand_detector_data.yaml  main.py  pyproject.toml
